app-kub-helm/app1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dss-apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one  
  namespace: dss-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
      - name: aks-helloworld-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        volumeMounts:
        # - name: mnt
        #   mountPath: "/mnt"
        #   readOnly: true 
        - name: azure
          mountPath: "/mnt"      
      volumes:
      # - name: mnt
      #   secret:
      #     secretName: dss-app1-secret
      #     optional: false
      - name: azure
        persistentVolumeClaim:
          claimName: azurefile
        csi:
          driver: file.csi.azure.com
          readOnly: false  
          volumeAttributes:
            secretName: dss-azfilemount-secret  # required
            shareName: dss-azurefilesh  # required  
            mountOptions: "dir_mode=0777,file_mode=0777,cache=strict,actimeo=30"  # optional 
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one  
  namespace: dss-apps
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
