app-kub-helm/app4.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: dss-apps
# --- 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-four  
  namespace: dss-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-four
  template:
    metadata:
      labels:
        app: aks-helloworld-four
    spec:
      containers:
      - name: aks-helloworld-four
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: "/mnt"
          # readOnly: false  
      volumes:
      - name: config-volume
        configMap:
          name: dss-cm-env-files
        # secret:
        #   secretName: dss-azblob-secret
        #   optional: false
        # persistentVolumeClaim:
        #   claimName: pvc-blobfuse-new2
      # csi:
      #   driver: blob.csi.azure.com
      #   readOnly: false  
        #   volumeAttributes:
        #     secretName: dss-azfilemount-secret  # required
        #     shareName: dss-azurefilesh  # required  
        #     mountOptions: "dir_mode=0777,file_mode=0777,cache=strict,actimeo=30"  # optional 
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-four  
  namespace: dss-apps
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-three
